File Browser: Blender freezes for half a minute when opening File Browser #112599

Closed
opened 2023-09-19 21:08:50 +02:00 by Seja · 10 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 537.13

Blender Version
Broken: 3.5, 3.6, 4.0
Worked: (newest version of Blender that worked as expected)

Short description of error
In Blender when I access a file that has a shortcut to my private cloud storage, which contains an IP address (\192.168..*), Blender freezes.
The cloud storage is not running most of the time, so it could be that Blender is trying to read the folder but fails, because the storage doesn't respond (because it's turned off).
Generic Windows File Explorer does the same thing when I open the folder (but doesn't freeze ofc, just trying to load it until timeout).

Exact steps for others to reproduce the error
You will need a shortcut-file that points to some address on the network that takes a long time to load.
One way I found to create a shortcut like this is by:

  • On a local network: access a file from another machine on the network and create a file shortcut from there (on you current machine)
  • Shut down the network or the computer being accessed.

Now that we have this shortcut-file:

  • in Blender, open File Browser in any way (loading file, or texture, or click on File > Import > Wavefront (.obj).)
  • Go to the directory with the shortcut-file

After some time, the files may finally appear and the delay disappears when accessed again.
To replicate the delay again, close and reopen Blender.

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 537.13 **Blender Version** Broken: 3.5, 3.6, 4.0 Worked: (newest version of Blender that worked as expected) **Short description of error** In Blender when I access a file that has a shortcut to my private cloud storage, which contains an IP address (\192.168..*), Blender freezes. The cloud storage is not running most of the time, so it could be that Blender is trying to read the folder but fails, because the storage doesn't respond (because it's turned off). Generic Windows File Explorer does the same thing when I open the folder (but doesn't freeze ofc, just trying to load it until timeout). <video src="/attachments/13d73ea1-ce30-4942-902a-8e115c113c49" controls></video> **Exact steps for others to reproduce the error** You will need a shortcut-file that points to some address on the network that takes a long time to load. One way I found to create a shortcut like this is by: - On a local network: access a file from another machine on the network and create a file shortcut from there (on you current machine) - Shut down the network or the computer being accessed. Now that we have this shortcut-file: - in Blender, open File Browser in any way (loading file, or texture, or click on File > Import > Wavefront (.obj).) - Go to the directory with the shortcut-file After some time, the files may finally appear and the delay disappears when accessed again. To replicate the delay again, close and reopen Blender.
Seja added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-09-19 21:08:50 +02:00
Seja changed title from Blender crashes when opening Blender File Browser to File Browser: Blender crashes when opening Blender File Browser 2023-09-19 21:31:26 +02:00

Thanks for the report, @Seja.

To better understand:

  • Are you experiencing this issue with any other folders on your system, or is it specific to the Documents folder?
  • Do you use any cloud storage service (OneDrive, Google Drive, Dropbox...) that shares files in Documents?
  • Have you tried running Blender as an administrator to see if it makes any difference?
  • Does this issue occur when you open the File Browser in other applications, or is it specific to Blender?

Once we have more information, we can forward your report to the development team for further investigation.

Thanks for the report, @Seja. To better understand: - Are you experiencing this issue with any other folders on your system, or is it specific to the Documents folder? - Do you use any cloud storage service (OneDrive, Google Drive, Dropbox...) that shares files in Documents? - Have you tried running Blender as an administrator to see if it makes any difference? - Does this issue occur when you open the File Browser in other applications, or is it specific to Blender? Once we have more information, we can forward your report to the development team for further investigation.
Germano Cavalcante added
Status
Needs Information from User
Platform
Windows
and removed
Status
Needs Triage
labels 2023-09-19 22:29:30 +02:00
Germano Cavalcante changed title from File Browser: Blender crashes when opening Blender File Browser to File Browser: Blender freezes for half a minute when opening File Browser 2023-09-19 22:30:40 +02:00
Member

From the side bar it does seem to have a One Drive shortcut, not sure if blender is trying to index and getting stats from that path. Technically shouldn't block the read...

From the side bar it does seem to have a `One Drive ` shortcut, not sure if blender is trying to index and getting stats from that path. Technically shouldn't block the read...

I am a HDD user, sometimes i can wait up to 5-10 seconds. The browser can't handle multiple threading, so blocking the blender can be distracting. But this is rather the current behavior, and the extreme case in this report...

I am a HDD user, sometimes i can wait up to 5-10 seconds. The browser can't handle multiple threading, so blocking the blender can be distracting. But this is rather the current behavior, and the extreme case in this report...
Iliya Katushenock added the
Interest
User Interface
label 2023-09-20 08:33:10 +02:00
Author

Hi @mano-wii
Thanks for the response

It seems your questions have lead me to the real cause of the problem. I tried to clear all folders/files from the folder and it didn't freeze. Then I put back a shortcut to my private cloud storage, which contains an IP adress (\192.168..*). Blender froze at this point, same way as I explained. The cloud storage is not running most of the time, so it could be that Blender is trying to read the folder but fails, because the storage doesn't respond (because it's turned off). Generic Windows File Explorer does the same thing when I open the folder (but doesn't freeze ofc, just trying to load it until timeout).

I tried to create a shortcut to OneDrive cloud storage and Blender opens it no problem.

Running Blender as administrator doesn't fix the issue.
I tested this further and no other files or folders cause this issue, only the shortcut to the cloud storage turned off.

Edit: Now that I tested it further, the part I said about saving the project and bug not happening afterwards is nonsense, it happens everytime it finds this shortcut somewhere. I moved the shortcut to another folder and the folder froze Blender.

Hi @mano-wii Thanks for the response It seems your questions have lead me to the real cause of the problem. I tried to clear all folders/files from the folder and it didn't freeze. Then I put back a shortcut to my private cloud storage, which contains an IP adress (\\192.168.**.***\). Blender froze at this point, same way as I explained. The cloud storage is not running most of the time, so it could be that Blender is trying to read the folder but fails, because the storage doesn't respond (because it's turned off). Generic Windows File Explorer does the same thing when I open the folder (but doesn't freeze ofc, just trying to load it until timeout). I tried to create a shortcut to OneDrive cloud storage and Blender opens it no problem. Running Blender as administrator doesn't fix the issue. I tested this further and no other files or folders cause this issue, only the shortcut to the cloud storage turned off. **Edit:** Now that I tested it further, the part I said about saving the project and bug not happening afterwards is nonsense, it happens everytime it finds this shortcut somewhere. I moved the shortcut to another folder and the folder froze Blender.
Author

@mod_moder I use all SSDs, so this shouldn't be a problem. Loading of files/folders usually goes without noticeable delay for me

@mod_moder I use all SSDs, so this shouldn't be a problem. Loading of files/folders usually goes without noticeable delay for me

I put back a shortcut to my private cloud storage, which contains an IP address (\192.168..*). Blender froze at this point...

Could you elaborate further on this? Maybe I can replicate the same problem here.

> I put back a shortcut to my private cloud storage, which contains an IP address (\192.168..*). Blender froze at this point... Could you elaborate further on this? Maybe I can replicate the same problem here.
Author

@mano-wii I did a short video on how I can easily reproduce this bug, hope this helps

@mano-wii I did a short video on how I can easily reproduce this bug, hope this helps

Thanks for the information. I am able to replicate and confirm the issue.

I edited the description to include the necessary steps.

I will forward your report to the development team for further investigation. Thank you for bringing this to our attention.

Thanks for the information. I am able to replicate and confirm the issue. I edited the description to include the necessary steps. I will forward your report to the development team for further investigation. Thank you for bringing this to our attention.

In addition to similar reports, it seems that this delay in trying to access inaccessible files is causing long load times in new versions of Blender. See #115935
They said that removing problematic network drives from the "Quick access" in File Browser solves the problem.

@Harley, @JulianEisel, any idea if any commit might have caused #115935?
Maybe it's worth somehow adding a popup saying {directory} is taking too long to access. Continue... | Skip.
(but why does Blender even try to access these directories?)

In addition to similar reports, it seems that this delay in trying to access inaccessible files is causing long load times in new versions of Blender. See #115935 They said that removing problematic network drives from the "Quick access" in File Browser solves the problem. @Harley, @JulianEisel, any idea if any commit might have caused #115935? Maybe it's worth somehow adding a popup saying `{directory} is taking too long to access. Continue... | Skip`. (but why does Blender even try to access these directories?)
Member

This sounds like a good reason to disable our adding of "Quick access" items to File Browser. Users can just bookmark items instead, which are much more manageable (removing individuals), and are move visible. Windows network timeouts are just too long when some users are going to have disconnected network paths there.

This sounds like a good reason to disable our adding of "Quick access" items to File Browser. Users can just bookmark items instead, which are much more manageable (removing individuals), and are move visible. Windows network timeouts are just too long when some users are going to have disconnected network paths there.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-01-03 18:26:39 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112599
No description provided.