source/blender/blenlib/intern/storage.cc
@@ -294,6 +294,7 @@ eFileAttributes BLI_file_attributes(const char *path)
 /* Return alias/shortcut file target. Apple version is defined in storage_apple.mm */
 #ifndef __APPLE__
 bool BLI_file_alias_target(const char *filepath,
+                           const bool update_if_broken,
                            /* This parameter can only be `const` on Linux since
                             * redirection is not supported there.
                             * NOLINTNEXTLINE: readability-non-const-parameter. */
@@ -322,7 +323,9 @@ bool BLI_file_alias_target(const char *filepath,
       if (conv_utf_8_to_16(filepath, path_utf16, ARRAY_SIZE(path_utf16)) == 0) {
         hr = PersistFile->Load(path_utf16, STGM_READ);
         if (SUCCEEDED(hr)) {
-          hr = Shortcut->Resolve(0, SLR_NO_UI | SLR_UPDATE);
+          if (update_if_broken) {
+            hr = Shortcut->Resolve(0, SLR_NO_UI | SLR_UPDATE);
+          }
           if (SUCCEEDED(hr)) {
             wchar_t target_utf16[FILE_MAXDIR] = {0};
             hr = Shortcut->GetPath(target_utf16, FILE_MAXDIR, NULL, 0);
@@ -340,7 +343,7 @@ bool BLI_file_alias_target(const char *filepath,
   CoUninitialize();
   return (success && r_targetpath[0]);
 #  else
-  UNUSED_VARS(r_targetpath, filepath);
+  UNUSED_VARS(r_targetpath, filepath, update_if_broken);
   /* File-based redirection not supported. */
   return false;
 #  endif
