source/blender/editors/space_file/filelist.cc
@@ -3095,7 +3095,7 @@ static int filelist_readjob_list_dir(FileListReadJob *job_params,
       /* Is this a file that points to another file? */
       if (entry->attributes & FILE_ATTR_ALIAS) {
         entry->redirection_path = MEM_cnew_array<char>(FILE_MAXDIR, __func__);
-        if (BLI_file_alias_target(full_path, entry->redirection_path)) {
+        if (BLI_file_alias_target(full_path, false, entry->redirection_path)) {
           if (BLI_is_dir(entry->redirection_path)) {
             entry->typeflag = FILE_TYPE_DIR;
             BLI_path_slash_ensure(entry->redirection_path, FILE_MAXDIR);
